<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical">

    <include
        layout="@layout/layout_toolbar_auth"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:paddingBottom="16dp"
            android:paddingLeft="30dp"
            android:paddingRight="30dp"
            android:paddingTop="40dp"
            tools:ignore="MissingPrefix">

            <EditText
                android:id="@+id/fragment_sign_up_et_email"
                style="@style/Widget.EditText.Auth"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/sign_up_hint_email"
                android:inputType="text|textEmailAddress"/>

            <android.support.v4.widget.Space
                android:layout_width="0px"
                android:layout_height="8dp"/>

            <EditText
                android:id="@+id/fragment_sign_up_et_password"
                style="@style/Widget.EditText.Auth"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/sign_up_hint_password"
                android:inputType="text|textPassword"/>

            <android.support.v4.widget.Space
                android:layout_width="0px"
                android:layout_height="8dp"/>

            <EditText
                android:id="@+id/fragment_sign_up_et_password_repeat"
                style="@style/Widget.EditText.Auth"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/sign_up_hint_password_repeat"
                android:inputType="text|textPassword"/>

            <android.support.v4.widget.Space
                android:layout_width="0px"
                android:layout_height="16dp"/>

            <Button
                android:id="@+id/fragment_sign_up_btn"
                android:theme="@style/SignInSingUpButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/auth_sign_up"
                android:textAllCaps="true"
                android:textColor="@color/app_white"/>
        </LinearLayout>
    </ScrollView>
</LinearLayout>