<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:paddingBottom="16dp"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="32dp"
        tools:ignore="MissingPrefix"
        android:weightSum="1">

        <ImageView
            android:layout_width="130dp"
            android:layout_height="130dp"
            android:contentDescription="@null"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_logo_130dp"/>

        <android.support.v4.widget.Space
            android:layout_width="0px"
            android:layout_height="15dp"/>

        <TextView
            fontPath="fonts/Roboto-Medium.ttf"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/app_slogan"
            android:textAllCaps="true"
            android:textSize="16sp"
            android:textColor="@color/app_white"/>

        <android.support.v4.widget.Space
            android:layout_width="0px"
            android:layout_height="70dp"/>

        <Button
            android:id="@+id/login_button"
            android:theme="@style/FacebookLoginButton"
            android:layout_width="230dp"
            android:layout_height="56dp"
            android:text="Facebook"
            android:drawableLeft="@drawable/ic_facebook"
            android:drawableStart="@drawable/ic_facebook"
            android:textColor="@color/auth_text_color"
            android:textAllCaps="true"
            android:textSize="16sp"/>

        <android.support.v4.widget.Space
            android:layout_width="0px"
            android:layout_height="2dp"/>

        <Button
            android:id="@+id/google_login_button"
            android:theme="@style/GoogleSignInButton"
            android:textColor="@color/auth_text_color"
            android:layout_width="230dp"
            android:layout_height="56dp"
            android:text="Google"
            android:drawableLeft="@drawable/ic_google_plus"
            android:drawableStart="@drawable/ic_google_plus"
            android:textAllCaps="true"
            android:textSize="16sp"/>

        <android.support.v4.widget.Space
            android:layout_width="0px"
            android:layout_height="40dp"/>

        <Button
            android:id="@+id/fragment_auth_btn_sign_in"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:theme="@style/SignInSingUp"
            android:layout_width="230dp"
            android:layout_height="56dp"
            android:text="@string/auth_sign_in"
            android:textColor="@color/auth_text_color"
            android:textAllCaps="false"
            android:textSize="16sp"/>

        <android.support.v4.widget.Space
            android:layout_width="0px"
            android:layout_height="2dp"/>

        <Button
            android:id="@+id/fragment_auth_btn_sign_up"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:theme="@style/SignInSingUp"
            android:layout_width="230dp"
            android:layout_height="56dp"
            android:text="@string/auth_sign_up"
            android:textColor="@color/auth_text_color"
            android:textAllCaps="false"
            android:textSize="16sp"/>
    </LinearLayout>
</ScrollView>